--- a/charts/tp-cp-tibcohub-contrib/templates/job.yaml
+++ b/charts/tp-cp-tibcohub-contrib/templates/job.yaml
@@ -1,3 +1,7 @@
+# Copyright © 2025. Cloud Software Group, Inc.
+# This file is subject to the license terms contained
+# in the license file that is distributed with this file.
+
 {{- $targetTag := (.Values.tibcoHub.image).tag | required ".Values.tibcoHub.image.tag is required." }}
 {{- $dot := . }}
 apiVersion: batch/v1
