--- a/charts/tp-cp-tibcohub-contrib/values.yaml
+++ b/charts/tp-cp-tibcohub-contrib/values.yaml
@@ -1,3 +1,7 @@
+# Copyright © 2025. Cloud Software Group, Inc.
+# This file is subject to the license terms contained
+# in the license file that is distributed with this file.
+
 capability:
   name: tibco-hub
 
@@ -7,7 +11,7 @@ source:
 tibcoHub:
   image:
     name: "dx-tibco-hub-cp-contrib"
-    tag: "233"
+    tag: "236"
     pullPolicy: IfNotPresent
 
 containerImageExtractor:
