--- a/charts/tibco-cp-messaging/recipes/spec.msgcore.yaml
+++ b/charts/tibco-cp-messaging/recipes/spec.msgcore.yaml
@@ -8,16 +8,29 @@ files:
   infra/msgcore/versions.json: |
     [
       {
-        "capabilityVersion": "1.11.0",
-        "minRollbackVersion": "1.11.0",
-        "minCPVersion": "1.9.0",
+        "capabilityVersion": "1.12.0",
+        "minRollbackVersion": "1.12.0",
+        "minCPVersion": "1.11.0",
         "maxCPVersion": "",
         "releaseDate": "2025/08/26",
         "releaseNotes": "Enhancements, Bug fixes, etc.",
-        "minVersionRequiredForUpgrade": "1.9.0",
+        "minVersionRequiredForUpgrade": "1.11.0",
         "minDPVersion": {
-          "dp-core-infrastructure": "1.9.0",
-          "dp-configure-namespace": "1.9.0"
+          "dp-core-infrastructure": "1.10.0",
+          "dp-configure-namespace": "1.10.0"
+        }
+      },
+      {
+        "capabilityVersion": "1.11.0",
+        "minRollbackVersion": "1.11.0",
+        "minCPVersion": "1.10.0",
+        "maxCPVersion": "",
+        "releaseDate": "2025/09/30",
+        "releaseNotes": "Enhancements, Bug fixes, etc.",
+        "minVersionRequiredForUpgrade": "1.10.0",
+        "minDPVersion": {
+          "dp-core-infrastructure": "1.10.0",
+          "dp-configure-namespace": "1.10.0"
         }
       },
       {
@@ -46,6 +59,40 @@ files:
         }
       }
     ]
+  infra/msgcore/1.12.0/recipe.yaml: |
+    recipe:
+      helmCharts:
+        - name: msg-gateway-tp
+          namespace: ${NAMESPACE}
+          version: "1.12.9"
+          repository:
+            chartMuseum:
+              host: ${HELM_REPO}
+          values:
+            - content: |
+                gwVersion: "10.4.0-9"
+          flags:
+            install: true
+            createNamespace: false
+            dependencyUpdate: true
+  infra/msgcore/1.12.0/package.json: |
+    {
+      "package": {
+        "services": [
+          {
+            "name": "tp-msg-gateway",
+            "description": "Messaging K8DP Gateway Services",
+            "monitoringPriority": "essential"
+          }
+        ],
+        "dependsOn": [],
+        "provisioningRoles": [
+          "DEV_OPS"
+        ],
+        "allowMultipleInstances": false,
+        "capabilityResourceDependencies": []
+      }
+    }
   infra/msgcore/1.11.0/recipe.yaml: |
     recipe:
       helmCharts:
@@ -57,7 +104,7 @@ files:
               host: ${HELM_REPO}
           values:
             - content: |
-                gwVersion: "10.4.0-92"
+                gwVersion: "10.4.0-6"
           flags:
             install: true
             createNamespace: false
