--- a/charts/dp-bw5ce-app/templates/service.yaml
+++ b/charts/dp-bw5ce-app/templates/service.yaml
@@ -25,7 +25,7 @@ spec:
   {{- range $svcPort := .Values.service.ports }}
   - name: port-{{ $svcPort.port }}
     port: {{ $svcPort.port }}
-    protocol: TCP
+    protocol: {{ default "TCP" $svcPort.protocol }}
     targetPort: {{ $svcPort.targetPort }}
   {{- end }}
   selector:
