--- a/charts/tp-cp-flogo-utilities/charts/flogo-utilities/values.yaml
+++ b/charts/tp-cp-flogo-utilities/charts/flogo-utilities/values.yaml
@@ -133,24 +133,24 @@ flogopluginsB:
     default: 3.0.1-hf1-b01
   tp-flogo-connector-ems:
     tags:
-      - 1.0.2-hf2-b01
-    default: 1.0.2-hf2-b01
+      - 1.0.3-b03
+    default: 1.0.3-b03
   tp-flogo-connector-gcps:
     tags:
       - 1.0.1-hf1-b01
     default: 1.0.1-hf1-b01
   tp-flogo-connector-general:
     tags:
-      - 1.6.9-b04
-    default: 1.6.9-b04
+      - 1.6.10-b05
+    default: 1.6.10-b05
   tp-flogo-connector-http:
     tags:
       - 1.1.1-b03
     default: 1.1.1-b03
   tp-flogo-connector-kafka:
     tags:
-      - 1.3.3-hf1-b02
-    default: 1.3.3-hf1-b02
+      - 1.3.3-hf2-b01
+    default: 1.3.3-hf2-b01
   tp-flogo-connector-lambda:
     tags:
       - 1.3.2-hf1-b01
@@ -205,8 +205,8 @@ flogopluginsD:
     default: 2.6.1-b03
   tp-flogo-connector-sqs:
     tags:
-      - 1.0.1-b01
-    default: 1.0.1-b01
+      - 1.0.2-b01
+    default: 1.0.2-b01
   tp-flogo-connector-tcm:
     tags:
       - 1.4.0-b11
@@ -227,8 +227,8 @@ flogopluginsE:
     default: 1.0.1-b03-flogo-2.25.0
   tp-flogo-connector-sftp:
     tags:
-      - 1.0.1-b02
-    default: 1.0.1-b02
+      - 1.0.2-b01
+    default: 1.0.2-b01
   tp-flogo-connector-files:
     tags:
       - 1.0.0-b14
@@ -261,19 +261,23 @@ flogopluginsF:
     default: 1.3.0-hf1-b05
   tp-flogo-connector-auditsafe:
     tags:
-      - 1.0.0-b02
-    default: 1.0.0-b02
+      - 1.0.0-b03
+    default: 1.0.0-b03
   tp-flogo-connector-sapsolutions:
     tags:
       - 1.0.0-hf1-b01
     default: 1.0.0-hf1-b01
+  tp-flogo-connector-mcp:
+    tags:
+      - 0.9.1-b11
+    default: 0.9.1-b11
 
 buildtypesExtract: true
 flogoBuildtypeImages:
   - name: tp-flogo-buildtype
     extract_image: true
     path: /var/lib/flogo/buildtypes/
-    tag: 2.25.9-b300
+    tag: 2.25.10-b325
     target_location: flogo/buildtypes
 
 probes:
