--- a/charts/bwprovisioner/config/otel/input-tail.conf
+++ b/charts/bwprovisioner/config/otel/input-tail.conf
@@ -8,6 +8,7 @@
     Path              /var/log/pods/*${POD_NAME}*/${CONTAINER_NAME}/*.log
     multiline.parser  docker, cri, multiline-regex
     Mem_Buf_Limit     30MB
+    Read_From_Head    True
     Buffer_Chunk_Size 10M
     Buffer_Max_Size   20M
     skip_long_lines   Off
