--- a/charts/dp-bw5ce-app/values.yaml
+++ b/charts/dp-bw5ce-app/values.yaml
@@ -40,6 +40,7 @@ networkPolicy:
   databaseEgress: enable
   proxyEgress: enable
   userApps: enable
+  clusterEgress: enable
 
 replicaCount: 1
 
@@ -49,7 +50,7 @@ image:
   appInitImageName: "tp-bwce-app-init"
   appInitImageTag: "52"
   fluentBitImageName: "common-fluentbit"
-  fluentBitImageTag: "4.0.8"
+  fluentBitImageTag: "4.1.0"
   bw5ceBaseImageName: "tp-bw5ce-base"
 
 imagePullSecrets: []
@@ -293,3 +294,13 @@ crds: []
 #      name: crd1
 #    spec:
 #      group: example.com
+
+initContainers: []
+#  - name: init-myservice
+#    image: busybox
+#    command: ['sh', '-c', 'echo The app is running! && sleep 3600']
+
+sidecars: []
+#  - name: sidecar-myservice
+#    image: busybox
+#    command: ['sh', '-c', 'echo The app is running! && sleep 3600']
