--- a/charts/flogoprovisioner/templates/ingress_public_traefik.yaml
+++ b/charts/flogoprovisioner/templates/ingress_public_traefik.yaml
@@ -8,7 +8,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
-    traefik.ingress.kubernetes.io/router.middlewares: {{ .Release.Namespace }}-{{ $fullName }}-oauth-errors@kubernetescrd,{{ .Release.Namespace }}-{{ $fullName }}-forward-auth@kubernetescrd,{{ .Release.Namespace }}-{{ $fullName }}-strip-prefix@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: {{ .Release.Namespace }}-{{ $fullName }}-strip-prefix@kubernetescrd
     {{- with .Values.global.cp.resources.ingress.annotations }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
@@ -37,33 +37,4 @@ spec:
     prefixes:
     - {{ .Values.publicApi.ingress.config.pathPrefix }}/
 
----
-apiVersion: traefik.io/v1alpha1
-kind: Middleware
-metadata:
-  name: {{ $fullName }}-forward-auth
-spec:
-  forwardAuth:
-    address: http://oauth2-proxy-{{ .Values.global.cp.instanceId }}.{{ .Release.Namespace }}.svc.cluster.local/auth
-    authResponseHeaders:
-    - X-Auth-Request-User
-    - X-Auth-Request-Email
-    - X-Forwarded-Access-Token
-    - X-Auth-Request-Access-Token
-    - X-Atmosphere-Token
-    trustForwardHeader: true
-
----
-apiVersion: traefik.io/v1alpha1
-kind: Middleware
-metadata:
-  name: {{ $fullName }}-oauth-errors
-spec:
-  errors:
-    query: {{ .Values.publicApi.ingress.config.pathPrefix }}/oauth2/sign_in?rd={url}
-    service:
-      name: oauth2-proxy-{{ .Values.global.cp.instanceId }}
-      port: 80
-    status:
-    - "401"
 {{- end }}
