--- a/charts/tp-cp-integration-bw/charts/bw-webserver/templates/fluentbit-configmap.yaml
+++ b/charts/tp-cp-integration-bw/charts/bw-webserver/templates/fluentbit-configmap.yaml
@@ -29,7 +29,16 @@ data:
     [INPUT]
       Name              tail
       Tag               cp.${POD_NAMESPACE}.${POD_NAME}.${POD_ID}.${CONTAINER_NAME}
-      Path              /var/log/pods/*.log
+      Path              /var/log/pods/bw*.log
+      multiline.parser  docker, cri
+      DB                /var/log/pods/flb_kube.db
+      Mem_Buf_Limit     5MB
+      Skip_Long_Lines   On
+      Refresh_Interval  10
+    [INPUT]
+      Name              tail
+      Tag               tp-cp-bw-mcpserver
+      Path              /var/log/pods/tp-cp-bw-mcpserver.log
       multiline.parser  docker, cri
       DB                /var/log/pods/flb_kube.db
       Mem_Buf_Limit     5MB
@@ -39,9 +48,9 @@ data:
   filter.conf: |
     [FILTER]
       Name              record_modifier
-      Match             cp.*
+      Match             *
       Remove_key        stream
-      Remove_key        _p    
+      Remove_key        _p
     [FILTER]
       Name              parser
       Match             cp.*
@@ -83,19 +92,25 @@ data:
       Remove_prefix     tscparser
     [FILTER]
       Name lua
-      Match cp.*
+      Match *
       Script update_record.lua
       Call update_record
+    [FILTER]
+      Name              parser
+      Match             tp-cp-bw-mcpserver
+      Key_Name          log
+      Parser            json_decode
+      Reserve_Data      True
 
   output.conf: |
     [OUTPUT]
       Name   stdout
-      Match  cp.*
+      Match  *
       Format json
 
     [OUTPUT]
       Name                 opentelemetry
-      Match                cp.*
+      Match                *
       Host                 {{ include "bw-webserver.cp-otel-services" . }}
       Port                 4318
       Logs_uri             /v1/logs
@@ -152,6 +167,7 @@ data:
           end
         end
         newLog["msg"] = newMsg
+        newLog["container.name"] = tag
         record["log"] = newLog
       end
       return 2, timestamp, record
