--- a/charts/tp-cp-integration-flogo/charts/flogo-webserver/values.yaml
+++ b/charts/tp-cp-integration-flogo/charts/flogo-webserver/values.yaml
@@ -19,7 +19,7 @@ global:
   fluentbit:
     image:
       name: "common-fluentbit"
-      tag: "4.0.8"
+      tag: "4.1.0"
     probes:
       livenessProbe:
         failureThreshold: 3
@@ -45,7 +45,7 @@ config:
   HTTP_REQUEST_TIMEOUT: "120000"
   IDLE_TIME_SECONDS: "1800"
   WEB_SERVER_LOG_ENABLED: "true"
-  FLOGO_WEBSERVER_IMAGE_TAG: "466-platform-1.11.0"
+  FLOGO_WEBSERVER_IMAGE_TAG: "500-platform-1.12.0"
 
 replicaCount: 1
 
@@ -95,6 +95,20 @@ fluentbit:
     limits:
       cpu: 100m
       memory: 150Mi
+
+mcpserver:
+  enabled: false
+  image:
+    name: tp-flogo-mcp-server
+    tag: "24"
+  logLevel: "INFO"
+  resources:
+    requests:
+      cpu: 100m
+      memory: 256Mi
+    limits:
+      cpu: 200m
+      memory: 512Mi
 
 probes:
   readinessProbe:
