--- a/charts/tibco-developer-hub/Chart.yaml
+++ b/charts/tibco-developer-hub/Chart.yaml
@@ -1,3 +1,7 @@
+# Copyright © 2025. Cloud Software Group, Inc.
+# This file is subject to the license terms contained
+# in the license file that is distributed with this file.
+#
 apiVersion: v2
 name: tibco-developer-hub
 description: A Helm chart for TIBCO® Developer Hub
@@ -6,8 +10,8 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 1.11.4
-appVersion: "1.11.0"
+version: 1.12.10
+appVersion: "1.12.0"
 dependencies:
   - name: common
     repository: ""
