platform-1.12-base: make mcp server optional on UI

--- a/charts/platform-base/charts/tp-cp-core/charts/web-server/templates/cp-webserver.yaml
+++ b/charts/platform-base/charts/tp-cp-core/charts/web-server/templates/cp-webserver.yaml
@@ -293,6 +293,8 @@ spec:
           value: https://$(TSC_DNS_DOMAIN)
         - name: FINOPS
           value: {{ .Values.global.tibco.finops }}
+        - name: CP_MCP_SERVER_ENABLED
+          value: "{{ .Values.cpmcpserver.enabled }}"
         - name: DOC_BASE_URL
           valueFrom:
             configMapKeyRef:
